<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewmodel"
            type="com.basil.taxiprepaid.ui.main.MainViewModel" />
    </data>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.main.MainActivity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero_dp"
                android:elevation="@dimen/dim_elevation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/colorPrimary">

                <TextView
                    android:id="@+id/tv_app_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_normal"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/app_name"
                    android:textAppearance="?textAppearanceHeadline3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_divider"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_user_id"
                style="@style/Theme.TaxiPrePaidSystem.EditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero_dp"
                android:layout_margin="@dimen/margin_big"
                android:hint="@string/user_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_user_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:longClickable="false"
                    android:singleLine="true"
                    android:inputType="textCapCharacters"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                    android:text="@={viewmodel.userID}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                style="@style/Theme.TaxiPrePaidSystem.EditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero_dp"
                android:layout_marginStart="@dimen/margin_big"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_big"
                android:hint="@string/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_user_id"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:longClickable="false"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                    android:text="@={viewmodel.password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/b_gen_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_big"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_big"
                android:text="@string/sign_in"
                style="@style/Theme.TaxiPrePaidSystem.Button.Secondary"
                android:onClick="@{() ->viewmodel.signIn()}"
                android:enabled="@{viewmodel.valid}"
                app:layout_constraintTop_toBottomOf="@id/til_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
