<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewmodel"
            type="com.basil.taxiprepaid.ui.boothbooking.BoothBookingViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.boothbooking.BoothBookingActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginTop="0dp"
            android:background="@android:color/white"
            android:elevation="@dimen/elevation_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:theme="@style/Theme.TaxiPrePaidSystem.ToolBarStyle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_passenger_name"
            style="@style/Theme.TaxiPrePaidSystem.EditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero_dp"
            android:layout_margin="@dimen/margin_normal"
            android:hint="@string/passenger_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_passenger_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:longClickable="false"
                android:singleLine="true"
                android:inputType="textPersonName"
                android:text="@={viewmodel.name}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_phone"
            style="@style/Theme.TaxiPrePaidSystem.EditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero_dp"
            android:layout_margin="@dimen/margin_normal"
            android:hint="@string/phone_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_passenger_name"
            app:prefixText="+91">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:longClickable="false"
                android:singleLine="true"
                android:inputType="number"
                android:maxLength="10"
                android:text="@={viewmodel.phone}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_destination"
            style="@style/Theme.TaxiPrePaidSystem.EditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero_dp"
            android:layout_margin="@dimen/margin_normal"
            android:hint="@string/destination"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:longClickable="false"
                android:singleLine="true"
                android:cursorVisible="false"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="@={viewmodel.destination}"
                android:onClick="@{() ->viewmodel.getDestinationAddress()}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_normal"
            app:layout_constraintTop_toBottomOf="@id/til_destination"
            app:layout_constraintBottom_toTopOf="@id/book_taxi"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/book_taxi"
            style="@style/Theme.TaxiPrePaidSystem..Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:text="@string/book_taxi"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1"
            android:onClick="@{() ->viewmodel.bookTaxi()}"
            android:enabled="@{viewmodel.valid}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>